# dario

./: .gitignore  Cargo.toml  Makefile  README.md  data_driver.wasm  index.html  rust-toolchain.toml
.github/workflows/: deploy-pages.yml  pages.yml
assets/: index-BBijm5Ah.js  index-BBijm5Ah.js.map  index-BpXJ1E_v.js  index-BpXJ1E_v.js.map  index-Dk-wnwFq.css
contract/: Cargo.toml
contract/src/: lib.rs
dario_fsm/: Cargo.toml
dario_fsm/src/: lib.rs
dash_core/: Cargo.toml
dash_core/src/: lib.rs
dash_web/: Cargo.toml
dash_web/src/: lib.rs
dash_zk/: Cargo.toml
dash_zk/src/: input_json.rs  lib.rs  witness.rs
data_driver/: Cargo.toml  Makefile  README.md
data_driver/src/: lib.rs  schema.json
mario_fsm/: Cargo.toml
mario_fsm/src/: lib.rs
moonlight_router/: Cargo.toml
moonlight_router/src/: lib.rs
tests/: Cargo.toml
tests/fixtures/: proof_bundle.json  run_fixture.json
tests/src/: lib.rs
web/: .env.example  index.html  package-lock.json  package.json  vite.config.js
web/src/: fsm.js  game.js  main.js  styles.css
web/src/zk/: ark-proof.mjs  prove.worker.js
zk/: Cargo.toml
zk/methods/: Cargo.toml
zk/methods/guest/: Cargo.toml
zk/methods/guest/src/: main.rs
zk/prover/: Cargo.toml
zk/prover/src/: main.rs  snark.rs  vk.rs
zk_browser/: package-lock.json  package.json
zk_browser/circuits/: dash_zk.circom  spike.circom
