[package]
name = "contract"
version = "0.1.0"
authors = ["Hein Dauven  <heindauven@gmail.com"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["contract"]
contract = ["dusk-core/abi-dlmalloc"]
data-driver = ["dep:dusk-data-driver", "dusk-data-driver/wasm-export", "dusk-data-driver/alloc", "dusk-core/serde"]

[dependencies]
dario_fsm = { path = "../dario_fsm" }
dusk-core = { workspace = true }
dusk-wasm = { workspace = true }
dusk-data-driver = { workspace = true, optional = true }

# Pin to avoid edition2024 issues with older nightly
time-core = "=0.1.6"
