[package]
name = "contract"
version = "0.1.0"
authors = ["Hein Dauven  <heindauven@gmail.com"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Contract WASM build
contract = ["dusk-core/abi-dlmalloc"]

# Data-driver WASM build (off-chain JSON encoding/decoding)
data-driver = [
  "dusk-core/serde",
  "dep:dusk-data-driver",
  "dusk-data-driver/wasm-export",
]

# Data-driver with memory allocator exports for JavaScript environments
data-driver-js = ["data-driver", "dusk-data-driver/alloc"]

[dependencies]
dario_fsm = { path = "../dario_fsm" }
dusk-core = { workspace = true }
dusk-forge = { workspace = true }
dusk-data-driver = { workspace = true, optional = true }

# Pin to avoid edition2024 issues with older nightly
time-core = "=0.1.6"
