[package]
name = "data_driver"
version = "0.1.0"
authors = ["Hein Dauven  <heindauven@gmail.com"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dusk-data-driver = { workspace = true }

[features]
ffi = ["dusk-data-driver/wasm-export"]
js = ["ffi", "dusk-data-driver/alloc"]
