[package]
name = "dash-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
dash-methods = { path = "../methods" }
dash_core = { path = "../../dash_core" }
risc0-zkvm = { workspace = true, features = ["client"] }

# ark 0.4 to match Dusk's on-chain deserializer exactly.
ark-bn254 = { version = "0.4", default-features = false, features = ["curve"] }
ark-groth16 = { version = "0.4", default-features = false }
ark-ec = { version = "0.4", default-features = false }
ark-ff = { version = "0.4", default-features = false }
ark-serialize = { version = "0.4", default-features = false }

anyhow = "1"
base64 = "0.22"
bs58 = "0.5"
hex = "0.4"
num-bigint = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
